Switch to java nio instead of io.